added functionality to reset the quantity of the cart items when a product is removed from the cart

--- a/index.html
+++ b/index.html
@@ -260,8 +260,13 @@
         </div>
       </div>
 
+      <!-- SIDEBAR -->
       <aside class="sidebar">
-        <button class="btn sidebar__close">
+        <button
+          class="btn sidebar__close"
+          type="button"
+          aria-label="close-sidebar"
+        >
           <svg
             class="sidebar__close-img"
             width="14"
